# AgenticRag_mcp_chatbot

./: .env  RAG chatbot with MCP.odp  RAG chatbot with MCP.ppt  README.md  main.py  pyproject.toml  requirements.txt
agents/: coordinator_agent.py  ingestion_agent.py  response_agent.py  retrieval_agent.py
core/: mcp.py  utils.py
ui/: streamlit_app.py
